--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Paarth Bir</h1>
+            <h2>MNIT Jaipur</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,15 +73,14 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am a third year undergraduate student from Electronics and Communication department, NIT Jaipur, India. I am deeply interested in Machine Learning, particularly in the field of Deep Learning.
+			Also interested in Android App Development.
                     </p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End #about -->
+    <!-- End #about --
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
@@ -111,39 +110,59 @@
             </div>
         </div>
     </div>
-    <!-- End #experience -->
+    !-- End #experience -->
 
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-        <!-- End .education-block -->
+    <!-- 	// EDUCATION BEGIN -->
 
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
+	<!-- // EDUCATION HEAD BEGIN -->
+	<section id="education">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-9 col-sm-6 col-xs-12">
+					<h2 style="font-family: 'Roboto'; font-weight: bold;" >EDUCATION</h2>
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<!-- // EDUCATION HEAD END -->
+
+	
+	<section id="education-section">
+		<div class="container">
+			<div class="row">
+				<div style="margin: 30px;">
+				<div class="border_row">
+					<div class="row">
+						<div class="col-md-6 col-sm-4 col-xs-12">
+							<div class="bx">MNIT Jaipur</div>
+							<span style="float: right;">2017 - Present</span>
+						</div>
+				
+						
+					</div>
+					<div class="bxc">Bachelor of Technology in Computer Science</div>
+					<div>CGPA: 8.70 (Till 4<sup>th</sup> sem)</div>
+				</div>
+			<br><br>
+
+				<div class="border_row">
+					<div class="row">
+						<div class="col-md-6 col-sm-4 col-xs-12">
+							<div class="bx">Base Model Sr. Sec. School</div>
+							<span style="float: right;">2008 - 2017</span>
+						</div>
+					</div>
+					<!-- <div class="bxc">Class 4th to Class 12th</div> -->
+					<div>Class 12<sup>th</sup> %: 90.8</div>
+					<div>Class 10<sup>th</sup> CGPA: 10</div>
+				</div>
+
+			</div>
+			</div>
+		</div>
+	</section>
+	<!-- // EDUCATION END -->
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
