--- a/index.html
+++ b/index.html
@@ -112,57 +112,34 @@
     </div>
     !-- End #experience -->
 
-    <!-- 	// EDUCATION BEGIN -->
+        <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>MNIT Jaipur</h3>
+            <span class="education-date">2017 - Present</span>
+            <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
+            <p>
+                CGPA: 8.12 (as of V<sup>th</sup> semester).
+            </p>
+        </div>
+        <!-- End .education-block -->
 
-	<!-- // EDUCATION HEAD BEGIN -->
-	<section id="education">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-9 col-sm-6 col-xs-12">
-					<h2 style="font-family: 'Roboto'; font-weight: bold;" >EDUCATION</h2>
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<!-- // EDUCATION HEAD END -->
-
-	
-	<section id="education-section">
-		<div class="container">
-			<div class="row">
-				<div style="margin: 30px;">
-				<div class="border_row">
-					<div class="row">
-						<div class="col-md-6 col-sm-4 col-xs-12">
-							<div class="bx">MNIT Jaipur</div>
-							<span style="float: right;">2017 - Present</span>
-						</div>
-				
-						
-					</div>
-					<div class="bxc">Bachelor of Technology in Computer Science</div>
-					<div>CGPA: 8.70 (Till 4<sup>th</sup> sem)</div>
-				</div>
-			<br><br>
-
-				<div class="border_row">
-					<div class="row">
-						<div class="col-md-6 col-sm-4 col-xs-12">
-							<div class="bx">Base Model Sr. Sec. School</div>
-							<span style="float: right;">2008 - 2017</span>
-						</div>
-					</div>
-					<!-- <div class="bxc">Class 4th to Class 12th</div> -->
-					<div>Class 12<sup>th</sup> %: 90.8</div>
-					<div>Class 10<sup>th</sup> CGPA: 10</div>
-				</div>
-
-			</div>
-			</div>
-		</div>
-	</section>
-	<!-- // EDUCATION END -->
+        <div class="education-block">
+            <h3>Delhi Public School, Faridabad</h3>
+            <span class="education-date">2012 - 2017</span>
+            <!--<h4>Bachelor of Science in Computer Science</h4> -->
+            <ul>
+                <li>
+                    Class XII : 93%.
+                </li>
+                <li>
+                    Class X CGPA : 10.
+                </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
