--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <h3>Delhi Public School, Faridabad</h3>
             <span class="education-date">2012 - 2017</span>
             <!--<h4>Bachelor of Science in Computer Science</h4> -->
+		<br>
             <ul>
                 <li>
                     Class XII : 93%.
@@ -151,9 +152,13 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>ZINE Android App</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            <ul>
+				    <li>An android application designed for the Zine Workshop'18 of MNIT Jaipur.</li>
+				    <li>Implemented Firebase Cloud Messaging, open source libraries, and Inserting Data in MySQL Database with the use of Volley Library in Java framework.</li>
+				    <li>Contained information related to Zine Robotics and Research Group.</li>
+			    </ul>
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -167,9 +172,41 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>FACE DETECTION AND VERIFICATION</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Application on Computer Vision and Deep Learning to detect faces in real time. Detected faces recognized by comparing with existing images. Further work was done in detecting facial expression using FER dataset available on Kaggle. Implemented on Raspberry Pi 3B+.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+		
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>WHATFOOD ANDROID APPLICATION</h3>
+                        <p>
+				Android application on Computer Vision and Deep Learning to identify food item from captured image.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+		
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>ROBOTICS</h3>
+                        <p>
+                            Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. Projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.
                         </p>
                         <a href="#">View Project</a>
                     </div>
