--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
         <div class="education-block">
             <h3>Delhi Public School, Faridabad</h3>
             <span class="education-date">2012 - 2017</span>
-            <!--<h4>Bachelor of Science in Computer Science</h4> -->
-		<br>
+            <h4> </h4>
             <ul>
                 <li>
                     Class XII : 93%.
@@ -221,32 +220,14 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
+            <li>C/C++</li>
+            <li>Android App Development</li>
+            <li>Tensorflow</li>
+            <li>Keras</li>
+            <li>Deep Learning</li>
+            <li>Arduino</li>
             <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -270,7 +251,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        &copy; 2020 Paarth Bir
                     </p>
                 </div>
                 <div class="col-sm-2 top">
