--- a/index.html
+++ b/index.html
@@ -225,9 +225,10 @@
             <li>Android App Development</li>
             <li>Tensorflow</li>
             <li>Keras</li>
+            <li>OpenCV</li>
             <li>Deep Learning</li>
             <li>Arduino</li>
-            <li>C#</li>
+		<li>Raspberry Pi</li>
         </ul>
     </div>
     <!-- End #skills -->
