--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				    <li>Contained information related to Zine Robotics and Research Group.</li>
 			    </ul>
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.app.zine.zine">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -175,7 +175,7 @@
                         <p>
                             Application on Computer Vision and Deep Learning to detect faces in real time. Detected faces recognized by comparing with existing images. Further work was done in detecting facial expression using FER dataset available on Kaggle. Implemented on Raspberry Pi 3B+.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/paarthbir77/face-detection">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -191,27 +191,22 @@
                         <p>
 				Android application on Computer Vision and Deep Learning to identify food item from captured image.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/paarthbir77/WhatFood-Android-App">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
 		
-		<div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>ROBOTICS</h3>
-                        <p>
-                            Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. Projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
+		<div class="project no-image">
+			
+    <div class="project-info">
+        <h3>ROBOTICS</h3>
+        <p>
+                Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. Projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.
+        </p>
+    </div>
+    <!-- End .project-info -->
+</div>
             </div>
         </div>
     </div>
@@ -252,7 +247,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        &copy; 2020 Paarth Bir
+                         2020 &copy; Paarth Bir
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -263,22 +258,18 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        
+                        <li>
+                            <a href="https://www.linkedin.com/in/paarthbir" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        
+                        <li>
+                            <a href="https://medium.com/@paarthbir" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="mailto:paarthbir@gmail.com" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
