--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/zine.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -167,7 +167,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/facedetect.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -183,7 +183,7 @@
 		
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/WhatFood.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -217,11 +217,11 @@
         <ul>
             <li>Python</li>
             <li>C/C++</li>
-            <li>Android App Development</li>
             <li>Tensorflow</li>
             <li>Keras</li>
             <li>OpenCV</li>
             <li>Deep Learning</li>
+		<li>Android App Development</li>
             <li>Arduino</li>
 		<li>Raspberry Pi</li>
         </ul>
@@ -266,10 +266,10 @@
                         </li>
                         
                         <li>
-                            <a href="https://medium.com/@paarthbir" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://medium.com/@paarthbir" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="mailto:paarthbir@gmail.com" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="mailto:paarthbir@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
