--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/WhatFood.png" />
+                        <img src="images/WhatFood.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
