--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/facedetect.png" />
+                        <img src="images/facedetect.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
