--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Paarth Bir</h1>
             <h2>MNIT Jaipur</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1zAarjRvRhGnZyf3rfth8iLENzs77PPCx/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -222,6 +222,7 @@
             <li>OpenCV</li>
             <li>Deep Learning</li>
 		<li>Android App Development</li>
+		<li>MATLAB</li>
             <li>Arduino</li>
 		<li>Raspberry Pi</li>
         </ul>
