--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <li>
                 <a href="#projects">Projects</a>
             </li>
+		<li>
+                <a href="#publications">Publications</a>
+            </li>
             <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -203,6 +206,26 @@
         <h3>ROBOTICS</h3>
         <p>
                 Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. Projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.
+        </p>
+    </div>
+    <!-- End .project-info -->
+</div>
+            </div>
+        </div>
+    </div>
+    <!-- End #projects -->
+    <div id="publications" class="background-alt">
+        <h2 class="heading">Publications</h2>
+        <div class="container">
+            <div class="row">
+		
+		<div class="project no-image">
+			
+    <div class="project-info">
+        <h3>A novel Mobile based hybrid Skin tone Classification algorithm for Cancer detection</h3>
+	    <h4>INTERNATIONAL CONFERENCE ON RECENT DEVELOPMENTS IN SCIENCE, ENGINEERING AND TECHNOLOGY (REDSET 2019) </h4>
+        <p>
+                A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous.
         </p>
     </div>
     <!-- End .project-info -->
