--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+	
+	<div id="preloader">
+		<div id="status">
+			<div class="loader-revolve center">
+				<span></span>
+			</div>
+		</div>
+	</div>
+	
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
@@ -214,7 +223,7 @@
         </div>
     </div>
     <!-- End #projects -->
-    <div id="publications" class="background-alt">
+	<div id="publications" class="background-alt">
         <h2 class="heading">Publications</h2>
         <div class="container">
             <div class="row">
