--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
 </head>
 
 <body>
-	
-	<div id="preloader">
-		<div id="status">
-			<div class="loader-revolve center">
-				<span></span>
-			</div>
-		</div>
-	</div>
+	<div class="loader"></div>
+
 	
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
