--- a/index.html
+++ b/index.html
@@ -142,8 +142,61 @@
         </div>
         <!-- End .education-block -->
     </div>
+	
+	
     <!-- End #education -->
 
+	<div id="education">
+        <h2 class="heading">CourseWork</h2>
+		
+		<div class="education-block">
+            <h3>Bachelors</h3>
+            <h4> </h4>
+            <ul>
+                <li>
+                    Data Structures and Algorithms
+                </li>
+                <li>
+			Operating Systems
+                </li>
+		    <li>
+			    Digital Signal Processing
+		</li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+     
+        <div class="education-block">
+            <h3>Coursera</h3>
+            <h4> </h4>
+            <ul>
+                <li>
+                    Introduction to TensorFlow for Artificial Intelligence, Machine Learning and Deep Learning by deeplearning.ai
+                </li>
+                <li>
+                    Neural Networks and Deep Learning by Andrew Ng,deeplearning.ai
+                </li>
+		    <li>
+			    Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by Andrew Ng,deeplearning.ai
+		    </li>
+		    <li>
+                    Convolutional Neural Networks by Andrew Ng,deeplearning.ai
+                </li>
+		    <li>
+                    Structuring Machine Learning Projects by Andrew Ng,deeplearning.ai
+                </li>
+		    <li>
+                    Device-based Models with TensorFlow Lite by deeplearning.ai
+                </li>
+		    
+            </ul>
+        </div>
+        <!-- End .education-block -->
+    </div>
+	
+	
+    <!-- End #education -->
+	
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
@@ -214,7 +267,7 @@
         </div>
     </div>
     <!-- End #projects -->
-	<div id="publications" class="background-alt">
+	<div id="projects" class="background-alt">
         <h2 class="heading">Publications</h2>
         <div class="container">
             <div class="row">
@@ -252,7 +305,7 @@
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
+   <!-- <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/email@email.com">
@@ -262,8 +315,8 @@
                 <button type="submit">Send</button>
             </form>
         </div>
-        <!-- End #contact-form -->
-    </div>
+        <!-- End #contact-form ->
+    </div> -->
     <!-- End #contact -->
 
     <footer>
