--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <li>
                 <a href="#education">Education</a>
             </li>
+		
+		
             <li>
                 <a href="#projects">Projects</a>
             </li>
@@ -43,7 +45,7 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#container">Contact</a>
             </li>
         </ul>
     </header>
@@ -150,7 +152,7 @@
         <h2 class="heading">CourseWork</h2>
 		
 		<div class="education-block">
-            <h3>Bachelors</h3>
+            <h3>University</h3>
             <h4> </h4>
             <ul>
                 <li>
