--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="#container">Contact</a>
+                <a href="#footer">Contact</a>
             </li>
         </ul>
     </header>
@@ -321,7 +321,7 @@
     </div> -->
     <!-- End #contact -->
 
-    <footer>
+    <footer id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
