--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <!-- End #projects -->
 	<div id="projects" class="background-alt">
         <h2 class="heading">Publications</h2>
-        <div class="container">
+        <div class="container" id="Publications">
             <div class="row">
 		
 		<div class="project no-image">
