--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
         </div>
     </div>
     <!-- End #projects -->
-	<div id="projects" class="background-alt">
+	<div id="Publications" class="background-alt">
         <h2 class="heading">Publications</h2>
-        <div class="container" id="Publications">
+        <div class="container">
             <div class="row">
 		
 		<div class="project no-image">
@@ -280,7 +280,7 @@
         <h3>A novel Mobile based hybrid Skin tone Classification algorithm for Cancer detection</h3>
 	    <h4>INTERNATIONAL CONFERENCE ON RECENT DEVELOPMENTS IN SCIENCE, ENGINEERING AND TECHNOLOGY (REDSET 2019) </h4>
         <p>
-                A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous.
+                A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous. To be published.
         </p>
     </div>
     <!-- End .project-info -->
