--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </div>
     </div>
     <!-- End #projects -->
-	<div id="Publications" class="background-alt">
+	<div id="publications" class="background-alt">
         <h2 class="heading">Publications</h2>
         <div class="container">
             <div class="row">
