--- a/index.html
+++ b/index.html
@@ -54,7 +54,29 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Paarth Bir</h1>
-            <h2>MNIT Jaipur</h2>
+           <!-- <h2>MNIT Jaipur</h2> -->
+		<div class="container">
+            <div class="row">
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        
+                        <li>
+                            <a href="https://www.linkedin.com/in/paarthbir" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        
+                        <li>
+                            <a href="https://medium.com/@paarthbir" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="mailto:paarthbir@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
             <a href="https://drive.google.com/file/d/1zAarjRvRhGnZyf3rfth8iLENzs77PPCx/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
