--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <h1>Paarth Bir</h1>
            <!-- <h2>MNIT Jaipur</h2> -->
 		<div class="container">
+			<div class="col-sm-5 social">
+				<h2>                  </h2>
+			</div>
             <div class="row">
                 <div class="col-sm-5 social">
                     <ul>
