--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1>Paarth Bir</h1>
            <!-- <h2>MNIT Jaipur</h2> -->
 		<div class="container">
-			<div class="col-sm-5 social">
+			<div class="col-sm-2 top">
 				<h2> </h2>
 			</div>
             <div class="row">
