--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true" style="color:white"></i></a>
                         </li>
                         
                         <li>
-                            <a href="https://www.linkedin.com/in/paarthbir" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/paarthbir" target="_blank"><i class="fa fa-linkedin" aria-hidden="true" style="color:white"></i></a>
                         </li>
                         
                         <li>
-                            <a href="https://medium.com/@paarthbir" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
+                            <a href="https://medium.com/@paarthbir" target="_blank"><i class="fa fa-medium" aria-hidden="true" style="color:white"></i></a>
                         </li>
                         <li>
-                            <a href="mailto:paarthbir@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            <a href="mailto:paarthbir@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true" style="color:white"></i></a>
                         </li>
                     </ul>
                 </div>
