--- a/index.html
+++ b/index.html
@@ -305,7 +305,17 @@
         <h3>A novel Mobile based hybrid Skin tone Classification algorithm for Cancer detection</h3>
 	    <h4>INTERNATIONAL CONFERENCE ON RECENT DEVELOPMENTS IN SCIENCE, ENGINEERING AND TECHNOLOGY (REDSET 2019) </h4>
         <p>
-                A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous. To be published.
+                A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous.
+        </p>
+	    <a href="https://doi.org/10.1007/978-981-15-5827-6_19">View Publication</a>
+    </div>
+			
+    <div class="project-info">
+        <h3>Transfer Learning based Tomato Leaf Disease Detection for mobile applications</h3>
+	    <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
+        <p>
+                Accepted for presentation at GUCON 2020. The paper aims to use transfer learning using pre-trained EfficientNetB0, MobileNetV2 and VGG 19 
+		models as feature extractors for classifying tomato leaf images to detect diseases on mobile devices at reduced costs.
         </p>
     </div>
     <!-- End .project-info -->
