--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <li>
                 <a href="#education">Education</a>
             </li>
-		
+	    <li>
+                <a href="#experience">Experience</a>
+            </li>
 		
             <li>
                 <a href="#projects">Projects</a>
@@ -110,37 +112,22 @@
             </div>
         </div>
     </div>
-    <!-- End #about --
+    <!-- End #about -->
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2020 – Present">
+                <h3>Toshiba India Pvt. Ltd.</h3>
+                <h4>Computer Vision Software Developer Internship</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Feature point matching and Simultaneous Localization and Mapping with camera based sensors.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
         </div>
     </div>
-    !-- End #experience -->
+    <!-- End #experience -->
 
         <div id="education">
         <h2 class="heading">Education</h2>
@@ -183,11 +170,20 @@
                 <li>
                     Data Structures and Algorithms
                 </li>
-                <li>
+		<li>
+                    Graph Theory
+                </li>
+		<li>
+                    Probabilistic Methods in Signals & Systems
+                </li>
+		<li>
 			Operating Systems
                 </li>
-		    <li>
-			    Digital Signal Processing
+		<li>
+                    Digital Signal Processing
+                </li>
+		<li>
+			Computer Architecture
 		</li>
             </ul>
         </div>
@@ -198,24 +194,21 @@
             <h4> </h4>
             <ul>
                 <li>
-                    Introduction to TensorFlow for Artificial Intelligence, Machine Learning and Deep Learning by deeplearning.ai
+                    Deep Learning Specialization by Andrew Ng, deeplearning.ai
                 </li>
-                <li>
-                    Neural Networks and Deep Learning by Andrew Ng,deeplearning.ai
-                </li>
-		    <li>
-			    Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by Andrew Ng,deeplearning.ai
-		    </li>
-		    <li>
-                    Convolutional Neural Networks by Andrew Ng,deeplearning.ai
-                </li>
-		    <li>
-                    Structuring Machine Learning Projects by Andrew Ng,deeplearning.ai
-                </li>
-		    <li>
+		<li>
+			TensorFlow in Practice Specialization by deeplearning.ai
+		</li>
+		<li>
                     Device-based Models with TensorFlow Lite by deeplearning.ai
                 </li>
-		    
+		<li>
+                    AI for Medical Diagnosis by deeplearning.ai
+                </li>
+		<li>
+                     Introduction to Data Science in Python by University of Michigan
+                </li>
+		
             </ul>
         </div>
         <!-- End .education-block -->
