--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am a third year undergraduate student from Electronics and Communication department, NIT Jaipur, India. I am deeply interested in Machine Learning, particularly in the field of Deep Learning.
-			Also interested in Android App Development.
+                        Final year undergraduate student interested in Computer Vision and Machine Learning. Currently intern at Toshiba India.
+			Also interested in Android Application Development.
                     </p>
                 </div>
             </div>
@@ -232,10 +232,9 @@
                             <ul>
 				    <li>An android application designed for the Zine Workshop'18 of MNIT Jaipur.</li>
 				    <li>Implemented Firebase Cloud Messaging, open source libraries, and Inserting Data in MySQL Database with the use of Volley Library in Java framework.</li>
-				    <li>Contained information related to Zine Robotics and Research Group.</li>
 			    </ul>
                         </p>
-                        <a href="https://play.google.com/store/apps/details?id=com.app.zine.zine">View Project</a>
+                        <a href="https://github.com/zine-robotics/Zine-Android">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -264,9 +263,11 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>WHATFOOD ANDROID APPLICATION</h3>
-                        <p>
-				Android application on Computer Vision and Deep Learning to identify food item from captured image.
-                        </p>
+                        <ul>
+				<li>Android application on Computer Vision and Deep Learning to identify food item from captured image.</li>
+				<li>Used to detect potential allergy attacks from food items based on user settings.</li>
+				<li>Patent pending.</li>
+                        </ul>
                         <a href="https://github.com/paarthbir77/WhatFood-Android-App">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -274,12 +275,20 @@
                 <!-- End .project -->
 		
 		<div class="project no-image">
-			
+    <div class="project-info">
+        <h3>BLOOD DONATION DRIVE ANDROID APPLICATION</h3>
+        <p>
+             Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts of Faridabad and Palwal for organizing a blood
+	donation drive in compliance with social distancing due to COVID-19 outbreak.
+        </p>
+	    <a href="https://drive.google.com/drive/folders/1WBZvpuVbxb_OHWrI71NtvSOLezpfntq9?usp=sharing">Media Coverage</a>
+    </div>
     <div class="project-info">
         <h3>ROBOTICS</h3>
-        <p>
-                Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. Projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.
-        </p>
+        <ul>
+                <li>Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. </li>
+		<li>Additional projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.</li>
+        </ul>
     </div>
     <!-- End .project-info -->
 </div>
