--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <!-- End .project -->
 		
 		<div class="project no-image">
-    <div class="project-info">
+    <div class="project shadow-large">
         <h3>BLOOD DONATION DRIVE ANDROID APPLICATION</h3>
         <p>
              Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts of Faridabad and Palwal for organizing a blood
@@ -283,7 +283,7 @@
         </p>
 	    <a href="https://drive.google.com/drive/folders/1WBZvpuVbxb_OHWrI71NtvSOLezpfntq9?usp=sharing">Media Coverage</a>
     </div>
-    <div class="project-info">
+    <div class="project shadow-large">
         <h3>ROBOTICS</h3>
         <ul>
                 <li>Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. </li>
@@ -303,7 +303,7 @@
 		
 		<div class="project no-image">
 			
-    <div class="project-info">
+    <div class="project shadow-large">
         <h3>A novel Mobile based hybrid Skin tone Classification algorithm for Cancer detection</h3>
 	    <h4>INTERNATIONAL CONFERENCE ON RECENT DEVELOPMENTS IN SCIENCE, ENGINEERING AND TECHNOLOGY (REDSET 2019) </h4>
         <p>
@@ -312,7 +312,7 @@
 	    <a href="https://doi.org/10.1007/978-981-15-5827-6_19">View Publication</a>
     </div>
 			
-    <div class="project-info">
+    <div class="project shadow-large">
         <h3>Transfer Learning based Tomato Leaf Disease Detection for mobile applications</h3>
 	    <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
         <p>
