--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
 		
 		<div class="project no-image">
     <div class="project shadow-large">
+	    <div class="project-info">
         <h3>BLOOD DONATION DRIVE ANDROID APPLICATION</h3>
         <p>
              Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts of Faridabad and Palwal for organizing a blood
@@ -283,13 +284,16 @@
         </p>
 	    <a href="https://drive.google.com/drive/folders/1WBZvpuVbxb_OHWrI71NtvSOLezpfntq9?usp=sharing">Media Coverage</a>
     </div>
+			</div>
     <div class="project shadow-large">
+	    <div class="project-info">
         <h3>ROBOTICS</h3>
         <ul>
                 <li>Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. </li>
 		<li>Additional projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.</li>
         </ul>
     </div>
+			</div>
     <!-- End .project-info -->
 </div>
             </div>
