--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Final year undergraduate student interested in Computer Vision and Machine Learning. Currently intern at Toshiba India.
+                        Final year undergraduate student interested in Computer Vision and Machine Learning. Currently interning at Toshiba India as a Computer Vision Software Developer.
 			Also interested in Android Application Development.
                     </p>
                 </div>
