--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Final year undergraduate student interested in Computer Vision and Machine Learning. Currently interning at Toshiba India as a Computer Vision Software Developer.
+                        Final year undergraduate student interested in the application of Computer Vision and Deep Learning in healthcare. Former intern at Toshiba India as a Computer Vision Software Developer.
 			Also interested in Android Application Development.
                     </p>
                 </div>
@@ -117,11 +117,11 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="May 2020 – Present">
+            <div data-date="May 2020 – October 2020">
                 <h3>Toshiba India Pvt. Ltd.</h3>
                 <h4>Computer Vision Software Developer Internship</h4>
                 <p>
-                    Feature point matching and Simultaneous Localization and Mapping with camera based sensors.
+                    Feature point matching and Simultaneous Localization and Mapping (SLAM) with camera based sensors.
                 </p>
             </div>
 
@@ -136,7 +136,7 @@
             <span class="education-date">2017 - Present</span>
             <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
             <p>
-                CGPA: 8.12 (as of V<sup>th</sup> semester).
+                CGPA: 8.16 (as of VI<sup>th</sup> semester).
             </p>
         </div>
         <!-- End .education-block -->
@@ -184,6 +184,12 @@
                 </li>
 		<li>
 			Computer Architecture
+		</li>
+		<li>
+			Computer Networks
+		</li>
+		<li>
+			Artificial Intelligence and Expert Systems
 		</li>
             </ul>
         </div>
@@ -323,11 +329,24 @@
         <h3>Transfer Learning based Tomato Leaf Disease Detection for mobile applications</h3>
 	    <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
         <p>
-                Accepted for presentation at GUCON 2020. The paper aims to use transfer learning using pre-trained EfficientNetB0, MobileNetV2 and VGG 19 
-		models as feature extractors for classifying tomato leaf images to detect diseases on mobile devices at reduced costs.
+                The paper aims to use transfer learning using pre-trained EfficientNetB0, MobileNetV2 and VGG 19 
+		models as feature extractors for classifying tomato leaf images to detect diseases on mobile devices at reduced costs. 
+		Performance also compared on segmented leaf dataset.
         </p>
+	    <a href="https://ieeexplore.ieee.org/abstract/document/9231174">View Publication</a>
 	    </div>
     </div>
+	<div class="project shadow-large">
+	    <div class="project-info">
+        <h3>A Review on Medical Image Analysis with Convolutional Neural Networks</h3>
+	    <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
+        <p>
+                The review introduces a few popular algorithms using Convolutional Neural Networks(CNNs) being used in the field along with their applications:
+		Classification, Detection, Segmentation, Registration and Image Enhancement.
+        </p>
+	    <a href="https://ieeexplore.ieee.org/abstract/document/9231203">View Publication</a>
+	    </div>
+    </div>		
     <!-- End .project-info -->
 </div>
             </div>
