--- a/index.html
+++ b/index.html
@@ -235,10 +235,9 @@
                     <div class="project-info">
                         <h3>ZINE Android App</h3>
                         <p>
-                            <ul>
-				    <li>An android application designed for the Zine Workshop'18 of MNIT Jaipur.</li>
-				    <li>Implemented Firebase Cloud Messaging, open source libraries, and Inserting Data in MySQL Database with the use of Volley Library in Java framework.</li>
-			    </ul>
+				Android application designed for Zine Workshop'18 of MNIT Jaipur. 
+				Implemented Firebase Cloud Messaging, open source libraries, and Inserting Data in MySQL Database with the use
+				of Volley Library in Java framework.
                         </p>
                         <a href="https://github.com/zine-robotics/Zine-Android">View Project</a>
                     </div>
@@ -254,7 +253,9 @@
                     <div class="project-info">
                         <h3>FACE DETECTION AND VERIFICATION</h3>
                         <p>
-                            Application on Computer Vision and Deep Learning to detect faces in real time. Detected faces recognized by comparing with existing images. Further work was done in detecting facial expression using FER dataset available on Kaggle. Implemented on Raspberry Pi 3B+.
+				Application on Computer Vision and Deep Learning to detect faces in real time. 
+				Detected faces recognized by comparing with existing images. Further work was done 
+				in detecting facial expression using FER dataset available on Kaggle. Implemented on Raspberry Pi 3B+.
                         </p>
                         <a href="https://github.com/paarthbir77/face-detection">View Project</a>
                     </div>
@@ -269,11 +270,10 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>WHATFOOD ANDROID APPLICATION</h3>
-                        <ul>
-				<li>Android application on Computer Vision and Deep Learning to identify food item from captured image.</li>
-				<li>Used to detect potential allergy attacks from food items based on user settings.</li>
-				<li>Patent pending.</li>
-                        </ul>
+			    <p>
+				    Android Application to identify food item from captured image. Used to warn users from potential allergy attacks based on identified dish's common 
+				    ingredients and user settings. Patent pending.
+			    </p>
                         <a href="https://github.com/paarthbir77/WhatFood-Android-App">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -285,8 +285,8 @@
 	    <div class="project-info">
         <h3>BLOOD DONATION DRIVE ANDROID APPLICATION</h3>
         <p>
-             Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts of Faridabad and Palwal for organizing a blood
-	donation drive in compliance with social distancing due to COVID-19 outbreak.
+		Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts
+		of Faridabad and Palwal for organizing a blood donation drive in compliance with social distancing due to COVID-19 outbreak.
         </p>
 	    <a href="https://drive.google.com/drive/folders/1WBZvpuVbxb_OHWrI71NtvSOLezpfntq9?usp=sharing">Media Coverage</a>
     </div>
@@ -294,10 +294,12 @@
     <div class="project shadow-large">
 	    <div class="project-info">
         <h3>ROBOTICS</h3>
-        <ul>
-                <li>Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while simultaneously moving across stacks using line following. </li>
-		<li>Additional projects using Arduino including Line Follower, Light Follower, Maze Solver, etc.</li>
-        </ul>
+		    <p>
+			    Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while 
+			    simultaneously moving across stacks using line following.Additional projects using Arduino including
+			    Line Follower, Light Follower, Maze Solver, etc.	
+		    </p>
+        
     </div>
 			</div>
     <!-- End .project-info -->
@@ -341,7 +343,7 @@
         <h3>A Review on Medical Image Analysis with Convolutional Neural Networks</h3>
 	    <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
         <p>
-                The review introduces a few popular algorithms using Convolutional Neural Networks(CNNs) being used in the field along with their applications:
+                The review introduces a few popular algorithms using Convolutional Neural Networks(CNNs) being used in medical image analysis along with their applications:
 		Classification, Detection, Segmentation, Registration and Image Enhancement.
         </p>
 	    <a href="https://ieeexplore.ieee.org/abstract/document/9231203">View Publication</a>
