--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Final year undergraduate student interested in the application of Computer Vision and Deep Learning in healthcare. Former intern at Toshiba India as a Computer Vision Software Developer.
-			Also interested in Android Application Development.
+                        Former undergraduate student from Malaviya National Institute of Technology(MNIT) interested in the application of Computer Vision and Deep Learning in healthcare.
+			Also interested in Android Application Development. Currently working at Société Générale as a Software Engineer.
                     </p>
                 </div>
             </div>
@@ -133,26 +133,11 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>MNIT Jaipur</h3>
-            <span class="education-date">2017 - Present</span>
+            <span class="education-date">2017 - 2021</span>
             <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
             <p>
-                CGPA: 8.16 (as of VI<sup>th</sup> semester).
+                CGPA: 8.24
             </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>Delhi Public School, Faridabad</h3>
-            <span class="education-date">2012 - 2017</span>
-            <h4> </h4>
-            <ul>
-                <li>
-                    Class XII : 93%.
-                </li>
-                <li>
-                    Class X CGPA : 10.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
     </div>
@@ -167,30 +152,16 @@
             <h3>University</h3>
             <h4> </h4>
             <ul>
-                <li>
-                    Data Structures and Algorithms
-                </li>
-		<li>
-                    Graph Theory
-                </li>
-		<li>
-                    Probabilistic Methods in Signals & Systems
-                </li>
-		<li>
-			Operating Systems
-                </li>
-		<li>
-                    Digital Signal Processing
-                </li>
-		<li>
-			Computer Architecture
-		</li>
-		<li>
-			Computer Networks
-		</li>
-		<li>
-			Artificial Intelligence and Expert Systems
-		</li>
+                <li> Data Structures and Algorithms</li>
+		<li> Graph Theory</li>
+		<li> Probabilistic Methods in Signals & Systems</li>
+		<li> Operating Systems</li>
+		<li> Digital Signal Processing</li>
+		<li> Computer Architecture </li>
+		<li> Computer Networks </li>
+		<li> Artificial Intelligence and Expert Systems </li>
+		<li> Neural Networks </li>
+		<li> Advanced Signal Processing </li>
             </ul>
         </div>
         <!-- End .education-block -->
@@ -199,21 +170,11 @@
             <h3>Coursera</h3>
             <h4> </h4>
             <ul>
-                <li>
-                    Deep Learning Specialization by Andrew Ng, deeplearning.ai
-                </li>
-		<li>
-			TensorFlow in Practice Specialization by deeplearning.ai
-		</li>
-		<li>
-                    Device-based Models with TensorFlow Lite by deeplearning.ai
-                </li>
-		<li>
-                    AI for Medical Diagnosis by deeplearning.ai
-                </li>
-		<li>
-                     Introduction to Data Science in Python by University of Michigan
-                </li>
+                <li> Deep Learning Specialization by Andrew Ng, deeplearning.ai</li>
+		<li> TensorFlow in Practice Specialization by deeplearning.ai</li>
+		<li> Device-based Models with TensorFlow Lite by deeplearning.ai</li>
+		<li> AI for Medical Diagnosis by deeplearning.ai</li>
+		<li> Introduction to Data Science in Python by University of Michigan</li>
 		
             </ul>
         </div>
@@ -392,7 +353,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                         2020 &copy; Paarth Bir
+                         2021 &copy; Paarth Bir
                     </p>
                 </div>
                 <div class="col-sm-2 top">
