--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Former undergraduate student from Malaviya National Institute of Technology(MNIT) interested in the application of Computer Vision and Deep Learning in healthcare.
+                        Former undergraduate from Malaviya National Institute of Technology(MNIT) interested in the application of Computer Vision and Deep Learning in healthcare.
 			Also interested in Android Application Development. Currently working at Société Générale as a Software Engineer.
                     </p>
                 </div>
