remove non english char

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
     <h2 class="heading">Experience</h2>
     <div id="experience-timeline">
         <div data-date="June 2021 – Present">
-            <h3>Société Générale</h3>
+            <h3>Societe Generale</h3>
             <h4>Software Engineer</h4>
             <ul>
-                <li>Working as lead developer on application to onboard clients into Société Générale Securities Services. Application acts as upstream to multiple applications and is used by middle
+                <li>Working as lead developer on application to onboard clients into Societe Generale Securities Services. Application acts as upstream to multiple applications and is used by middle
                     and back offices.</li>
                 <li>Migrated workflow to manage the flow of instructions(forms) from an external tool to in-application. Reduced flow related incidents to 0</li>
                 <li>Merged related instructions to a combined single instruction based on business rules. Reduced middle and back office efforts by 50%.</li>
